Correct z-indexes

--- a/src/pages/dashboard/css/dashboard.css
+++ b/src/pages/dashboard/css/dashboard.css
@@ -5,5 +5,4 @@
 .dashboard_content {
   position: relative;
   height: 100%;
-  z-index: 0;
 }
