--- a/src/pages/dashboard/css/menu.css
+++ b/src/pages/dashboard/css/menu.css
@@ -1,5 +1,5 @@
 .menu {
-
+  z-index: 1;
 }
 
 .menu_item {
